agrega seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -1,5 +1,45 @@
 <html>
+    <head>
+        <title>Portafolio</title>
+        <link rel="stylesheet" href="src\css\style.css"/>
+    </head>
     <body>
-        <h2>Giovanny Abrego</h2>
+        <div class="wrapper">
+            <header>
+            <nav class="navbar">
+                <div class="brand">
+                    <h2>GA</h2>
+                </div>
+                <ul class="menu">
+                    <li><a class="active" href="#">Inicio</a></li>
+                    <li><a href="#">Sobre mi</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                </ul>
+            </nav>
+            </header>
+            <main class="main">
+                <div class="info-content">
+                    <h1>Giovanny Abrego</h1>
+                    <p>Estudiante de 5to año de ingenieria en computación especializado en desarrollo de software.</p>
+                    <a download="src\pdf\curriculum.pdf" href="">
+                        <button class="download-cv"> 
+                            Descargar CV
+                        </button>
+                    </a>
+                </div>
+                <img src="src/img/profile.png" alt="Foto de Giovanny Abrego"/>
+            </main>
+        </div>
+        
+        <div class="about">
+            <img src="src/img/logoudb.png" alt="Logo UDB"/>
+            <div class="about-info">
+                <h2>Acerca de mí</h2>
+                <div class="divider"></div>
+                <p>Realizo mis estudios en la Universidad Don Bosco donde estoy en mi ultimo año de ingenieria, y en años anteriores
+                    complete el pensum de la carrera Técnico en ingenieria de la computación.</p>
+                <button class="download-cv">Leer mas...</button>
+            </div>
+        </div>
     </body>
 </html>
